go over basic concepts

--- a/Notes/React/includes/markdown/01.MainConcepts.md
+++ b/Notes/React/includes/markdown/01.MainConcepts.md
@@ -1,10 +1,10 @@
-# Main Concept
+# Main Concepts
 
-## JSX
+## 1. JSX
 
-JSX is javascript sugar for reactjs. It is recommended being used in React to describe what the UI should look like.
+**JSX** is a javascript sugar for reactjs. It is recommended being used in React to describe what the UI should look like.
 JSX may remind you of template language, but **it comes with the full power of javascript**.
-JSX produces React 'element'.
+JSX produces React *'element'*.
 
 ### Embedding Expressions in JSX
 
@@ -58,7 +58,7 @@ const element = React.createElement(
 )
 ```
 
-## Rendering an Element into the DOM
+## 2. Rendering an Element into the DOM
 
 ```javascript
 import ReactDOM from 'react-dom'
@@ -66,9 +66,9 @@ const ele = <h1>Hello, world<h1>
 ReactDOM.render(ele, document.getElementById('root'))
 ```
 
-## Components and Props
+## 3. Components and Props
 
-### Functional and class Components
+### 3.1 Functional and class Components
 
 The simplest way to define a component is to write a JavaScript function:
 
@@ -94,7 +94,7 @@ class Welcome extends React.Component {
 
 The above two components are equivalent from React’s point of view.
 
-### Rendering a Component
+### 3.2 Rendering a Component
 
 ```javascript
 function Welcome(props) {
@@ -110,13 +110,14 @@ ReactDOM.render(
 
 The render method will be called each time an update happen.
 
-### Composing Components
+### 3.3 Composing Components
 
-### Extracting Components
+### 3.4 Extracting Components
 
+**We recomemmd naming props from the component's own view rather than the context in which it is being used.**
 The **DRY** principle to create a component.
 
-### Props are Read-Only
+### 3.5 Props are Read-Only
 
 Consider this *sum* function:
 
@@ -136,12 +137,11 @@ function withdraw (account, amount) {
 }
 ```
 
-React is pretty flexible but it has a single strict rule:
-**All React components must act like pure functions with respect to their props.*
+React is pretty flexible but it has a single strict rule that **all React components must act like pure functions with respect to their props.**
 
-## State and Lifecycle
+## 4. State and Lifecycle
 
-The **state** is similar to **props**, but it is private and entirely controlled by the component of it.
+The **state** is similar to **props**, but it is private and entirely controlled by the component of it and only available to classes.
 
 The differences between a pure function component and an **ES6** class component is the function component does have a state.
 
@@ -171,7 +171,7 @@ class Tick extends Component {
 export default Tick
 ```
 
-### Adding Lifecycle Methods to a Class
+### 4.1 Adding Lifecycle Methods to a Class
 
 The **componentDidMount()** hook runs will execute when the component output renders to the DOM.
 
@@ -179,17 +179,25 @@ In react, we use **this.setState()** to update a local state for a component.
 
 If the a component is ever removed from the DOM, React calls the **componentWillUnmount()** lifecycle hook, so the timer is stopped.
 
-### Using State Correctly
+### 4.2 Using State Correctly
 
-#### Update state by **setState**
+- Do not modify **state** directly
+- State Updates May Be asynchronous
 
-#### State Updates May Be Asynchronous
+React may batch multiple **setState** call into a single update for performance. Because **this.props** and **this.state** may be updated asynchronously, you should not rely on their values for calculating next state.
+The recommaned ways could be either:
 
-React may batch multiple setState() calls into a single update for performance.
+#### 4.3 Update state by **setState**
 
-Because this.props and this.state may be updated asynchronously, you should not rely on their values for calculating the next state.
+```javascript
+this.setState((state, props) => {
+  return {
+    counter: state.count + props.increment
+  }
+})
+```
 
-Solution:
+or :
 
 ```javascript
 this.setState((prevState, props) => ({
@@ -199,9 +207,11 @@ this.setState((prevState, props) => ({
 
 **setState** function accepts a function rather than an object.
 
-### State Updates are Merged
+### 4.4 State Updates are Merged
 
-### The Data Flows Down
+When you call **setState**, React merges the object you provide into current state.
+
+### 4.5 The Data Flows Down
 
 *The Data Flows Down** is commonly called a “top-down” or “unidirectional” data flow. Any state is always owned by some specific component, and any data or UI derived from that state can only affect components “below” them in the tree.
 
@@ -213,12 +223,12 @@ this.setState((prevState, props) => ({
 
 **DOM diff** bases on **the breadth-first algorithm**.
 
-## Handling Events
+## 6. Handling Events
 
 Handling events with React is very similar to handling events on DOM elements. There are some syntactic differences:
 
 - React events are named using camelCase, rather than lowercase.
-- With JSX you pass a function as the event handler, rather than a string.
+- With JSX, you pass a function as the event handler, rather than a string.
 - Another difference is that you cannot return false to prevent default behavior in React. You must call preventDefault explicitly.
 
 ```javascript
@@ -229,17 +239,15 @@ function ActionClick () {
   }
 
   return (
-    // this will be undefined withouth bind declaration
+    // For actionClick function, this will be undefined withou binding declaration
     <a href="#" onClick={handleClick.bind(this)}>Click me </a>
   )
 }
 ```
 
-Here, *e* is a synthetic event. React defines these synthetic events according to the W3C spec, so you don’t need to worry about cross-browser compatibility. See the <a href="https://reactjs.org/docs/events.html">SyntheticEvent</a> reference guide to learn more.</br>
+Here, *e* is a synthetic event. React defines these synthetic events according to the W3C spec, so you don’t need to worry about cross-browser compatibility. See the [SyntheticEvent](https://reactjs.org/docs/events.html) reference guide to learn more.</br>
 
-A full example is <a href="../../src/components/Clock/index.js"> Clock Component</a>
-
-## Conditional Rendering
+## 6. Conditional Rendering
 
 ```javascript
 function Greeting (props) {
@@ -256,7 +264,7 @@ ReactDOM.render(
 )
 ```
 
-### Preventing Component from Rendering
+### 6.1 Preventing Component from Rendering
 
 In rare cases you might want a component to hide itself event though it was rendered by another component. To do this return **null** instead of its render output.
 
@@ -273,11 +281,11 @@ function WarningBanner (props) {
 }
 ```
 
-## Lists and keys
+## 7. Lists and keys
 
-### Rendering Multiple Components
+### 7.1 Rendering Multiple Components
 
-### Keys
+### 7.2 Keys
 
 Keys help React identify which items have changed, are added, or are removed. **Keys should be given to the elements inside the array to give the elements a stable identity:**
 
@@ -305,19 +313,107 @@ class ShoppingList extends Component {
 }
 ```
 
-**Dont use index as a key. Not recomende. This can negatively impact in performance and may cause issues with component state.**
+**Dont use index as a key. Not recommend. This can negatively impact in performance and may cause issues with component state.**
 
-Here is an in-depth explanation of <a href="https://reactjs.org/docs/reconciliation.html#recursing-on-children">why keys are necessary</a>   if you’re interested in learning more.
+Here is an in-depth explanation of [why keys are necessary](https://reactjs.org/docs/reconciliation.html#recursing-on-children) if you’re interested in learning more.
 
-## Forms
+## 8. Forms
 
-## Lifting State Up
+### 8.1 Controlled Components
 
-## Composition vs. Inheritance
+In HTML, form elements such as **input**, **textarea**, and **select** typically maintain their own state and update it on user input.
+a
+An input form element whoes value is controlled by React in this way is called a **"controlled element"**.
+
+Here is an example:
+
+```javascript
+import React from 'react'
+
+class NameForm extends React.Component {
+  constructor(props) {
+    super(props)
+    this.state = {
+      value: ''
+    }
+    this.handleChange = this.handleChange.bind(this)
+    this.handleSubmit = ths.handleSubmit.bind(this)
+  }
+
+  handleChange(e) {
+    this.setState({
+      value: e.target.value
+    })
+  }
+
+  handleSubmit(e) {
+    e.preventDefault()
+    window.alert(`A name was submitted: ${this.state.value}`)
+  }
+
+  render() {
+    return (
+      <form action="" name="nameForm" onsubmit={this.onsubmit}>
+        <label htmlFor="name">Name: <input type="text"/ value={this.state.value} onChange={this.handleChange}></label>
+        <input type="submit"/ value="submit">
+      </form>
+    )
+  }
+}
+```
+
+### 8.2 textarea and select
+
+- The textarea tag
+
+In HTML, **textarea** defines its text by its chidlren:
+
+```html
+<textarea>
+  Hi, there.
+</textarea>
+```
+
+In React, **textarea** uses a vake=ye attribute instead. This way, a form using **textarea** can be written very similarly to a form that uses a single-line input.
+
+- The select tag
+
+In HTML, the **select** tag creates a drop-down list. For example, this HTML creats a drop-down list of user's department:
+
+```html
+<select name="department" id="department">
+  <option value="">Please select a department</option>
+  <option value="Marketing" selected>Marketing</option>
+  <option value="IT">IT</option>
+  <option value="office">office</option>
+</select>
+```
+
+In React, instead of using this **selected** attribute, uses a **value** attribute on the root **select** tag.
+
+A full example about how to use **textarea** and **select** element in React is [examples/react/10.formSample](../../../../src/examples/react/10.formSample)
+
+### 8.3 Controlled Input Null value
+
+**If you have sepecified a value* but the input is still editable, you may have accidentally set value to undefined or null.**
+
+## 9. Lifting State Up
+
+**NO** **two-way binding** in React.
+
+**Often, several components need to reflect the same changing data. We recommend lifting the shared state up to their closest common ancestor. Let’s see how this works in action.**
+
+**There should be a single “source of truth” for any data that changes in a React application. Usually, the state is first added to the component that needs it for rendering. Then, if other components also need it, you can lift it up to their closest common ancestor. Instead of trying to sync the state between different components, you should rely on the [top-down data flow](https://reactjs.org/docs/state-and-lifecycle.html#the-data-flows-down)**.
+
+## 10. Composition vs. Inheritance
 
 React has a powerful composition model, and we **recommend using composition** instead of inheritance to reuse code between components.
 
-### Containment
+### 10.1 Containment
+
+Some components don’t know their children ahead of time. This is especially common for components like Sidebar or Dialog that represent generic “boxes”.
+
+We recommend that such components use the **special children prop** to pass children elements directly into their output:
 
 - this.props.children
 
@@ -334,6 +430,8 @@ const Wrapper = (props) => {
 - props
 
 Both ***Contacts*** and ***Chat** here are object. So we can pass then to children component as a props's property.
+
+This lets other components pass **arbitrary children** to them by nesting the JSX:
 
 ```javascript
 function SplitPanel(props) {
@@ -362,20 +460,47 @@ function App() {
 }
 ```
 
-### Specialization
+### 10.2 Specialization
 
 Sometimes we think about components as being “special cases” of other components. For example, we might say that a ***WelcomeDialog*** is a special case of ***Dialog**.
 
-### So what about inheritance
+In React, this is also achieved by composition, where a more “specific” component renders a more “generic” one and configures it with props:
+
+```javascript
+function Dialog(props) {
+  return (
+    <FancyBorder color="blue">
+      <h1 className="Dialog-title">
+        {props.title}
+      </h1>
+      <p className="Dialog-message">
+        {props.message}
+      </p>
+    </FancyBorder>
+  );
+}
+
+function WelcomeDialog() {
+  return (
+    <Dialog
+      title="Welcome"
+      message="Thank you for visiting our spacecraft!" />
+
+  );
+}
+```
+
+### 10.3 So what about inheritance
 
 At Facebook, we use React in thousands of components, and we haven’t found any use cases where we would recommend creating component inheritance hierarchies.
 
 If you want to reuse non-UI functionality between components, we suggest extracting it into a separate JavaScript module. The components may import it and use that function, object, or a class, without extending it.
 
-## Thinking in React
+## 11. Thinking in React
 
 In this chapter, we’ll walk you through the thought process of building a searchable product data table using React.
 
-The **single responsibility principle**, that is, **a component should ideally do one thing**. If it ends up with growing, decompose it into smaller sub-components. (https://en.wikipedia.org/wiki/Single_responsibility_principle)
+**A class should have only one reason to change**.
+The **single responsibility principle**, that is, **a component should ideally do one thing**. If it ends up with growing, decompose it into smaller sub-components. [https://en.wikipedia.org/wiki/Single_responsibility_principle](https://en.wikipedia.org/wiki/Single_responsibility_principle)
 
-A detailed example is here: https://reactjs.org/docs/thinking-in-react.html
+A detailed example is here: [https://reactjs.org/docs/thinking-in-react.html](https://reactjs.org/docs/thinking-in-react.html)
