--- a/Notes/React/includes/markdown/02.AdvancedGuides.md
+++ b/Notes/React/includes/markdown/02.AdvancedGuides.md
@@ -1,8 +1,89 @@
 # Advanced Guides
 
-## Accessibility
+## 1. Accessibility
 
-## Code-Splitting
+React fully supports building accessible websites, often by using standard HTML techniques.
+
+## 2. Code-Splitting
+
+### 2.1 import
+
+Before:
+
+```javascript
+import { add } from './math';
+
+console.log(add(16, 26));
+```
+
+After:
+
+```javascript
+import("./math").then(math => {
+  console.log(math.add(16, 26))
+});
+```
+
+### 2.2 Using **react-loadable**
+
+- 2.2.1 **react-loadable**
+
+Before:
+
+```javascript
+import OtherComponent from './OtherComponent';
+
+const MyComponent = () => (
+  <OtherComponent/>
+)
+```
+
+After:
+
+```javascript
+import Loadable from 'react-loadable';
+
+const LoadableOtherComponent = Loadable({
+  loader: () => import('./OtherComponent'),
+  loading: () => <div>Loading...</div>,
+})
+
+const MyComponent = () => (
+  <LoadableOtherComponent/>
+)
+```
+
+- 2.2.2 Spliting code by Route
+
+```javascript
+import { BrowserRouter as Router, Route, Switch } from 'react-router-dom';
+import Loadable from 'react-loadable';
+
+const Loading = () => <div>Loading...</div>;
+
+const Home = Loadable({
+  loader: () => import('./routes/Home'),
+  loading: Loading,
+});
+
+const About = Loadable({
+  loader: () => import('./routes/About'),
+  loading: Loading,
+});
+
+const App = () => (
+  <Router>
+    <Switch>
+      <Route exact path="/" component={Home}/>
+      <Route path="/about" component={About}/>
+    </Switch>
+  </Router>
+)
+```
+
+**React Loadable helps you create loading states, error states, timeouts, preloading, and more. It can even help you server-side render an app with lots of code-splitting.**
+
+More information about **react-loadable**, please go to [https://github.com/jamiebuilds/react-loadable](https://github.com/jamiebuilds/react-loadable)
 
 ## 3. Context
 
@@ -96,92 +177,68 @@ The **Provider** accepts a *value* prop to be passed to Consumers that are desce
 
 ### 3.4 Forwarding Refs to Context Consumers
 
-## Code splitting
+## 4. Error Boundaries
 
-Bundling is great, but as your app grows, your bundle will grow too.
+### 4.1 Note
 
-### import
+**Error boundaries do not catch errors for:**
 
-The best way to introduce code-splitting into your app is through the dynamic import() syntax.
+- Event handlers (learn more)
+- Asynchronous code (e.g. setTimeout or requestAnimationFrame callbacks)
+- Server side rendering
+- Errors thrown in the error boundary itself (rather than its children)
+- A javascript error in a part of UI shouldn't break the whole app. To solve this problem for React users, React 16 introduces a new concept of an **"error boundary"**.
 
-Before:
+Error boundaries are React concepts that **catch javascript errors anywhere in their child component tree, log errors, and display a fallback UI** instead of the component tree that crashed. **Error boundaries catch errors during rendering, in lifecycle methods, and in constructors of the whole tree below them.**.
 
-```javascript
-import { add } from './math'
+A class component becomes an error boundary if it defines a new lifecycle method called **componentDidCatch(error, info)**
 
-console.log(add(16, 26))
-
-```
-
-After:
-
-```javascript
-import("./math").then(math => {
-  console.log(math.add(16, 26));
-})
-```
-
-Webpack automatically provides code splitting for your app with **import API**.
-If you’re using **create-react-app**, it has code-splitting function by default.
-
-### Libraries
-
-[React Loadable](https://github.com/jamiebuilds/react-loadable)wraps dynamic imports in a nice, React-friendly API for introducing code splitting into your app at a given component.
-
-Before:
+A sample of error boundary:
 
 ```javascript
-import OtherComponent from './OtherComponent'
+import React from 'react'
 
-const MyComponent = () => (
-  <OtherComponent/>
-)
+class ErrorBoundary extends React.Component {
+  constructor(props) {
+    super(props)
+    this.state = {
+      hasError: false
+    }
+  }
+
+  componentDidCatch(error, info) {
+    this.setState({
+      hasError: true
+    })
+
+    // you can aslo log the error to an error reporting service
+    logErrorToMyService(error, info)
+  }
+
+  render() {
+    if(this.state.hasError) {
+      return <h1>Somthing went wrong</h1>
+    }
+    return this.props.children
+  }
+}
 ```
 
-After:
+Use it
 
 ```javascript
-import Loadable from 'react-loadable';
-
-const LoadableOtherComponent = Loadable({
-  loader: () => import('./OtherComponent'),
-  loading: () => <div>Loading...</div>,
-});
-
-const MyComponent = () => (
-  <LoadableOtherComponent/>
-)
+<ErrorBoundary>  
+  <MyWidget />
+</ErrorBoundary>
 ```
 
-### Route-based code splitting
+A full example, please go to [https://codepen.io/gaearon/pen/wqvxGa?editors=0010](https://codepen.io/gaearon/pen/wqvxGa?editors=0010)
 
-```javascript
-import { BrowserRouter as Router, Route, Switch } from 'react-router-dom'
-import Loadable from 'react-loadable'
+### 4.2 New Behavior for Uncaught Errors
 
-const Loading = () => <div>Loading...</div>
+**As of React 16, errors that were not caught by any error boundary will result in unmounting of the whole React component tree.**
 
-const Home = Loadable({
-  loader: () => import('./routes/Home'),
-  loading: Loading,
-})
-
-const About = Loadable({
-  loader: () => import('./routes/About'),
-  loading: Loading,
-})
-
-const App = () => (
-  <Router>
-    <Switch>
-      <Route exact path="/" component={Home}/>
-      <Route path="/about" component={About}/>
-    </Switch>
-  </Router>
-)
-```
-
-## Optimizing Performance
+## 5. Optimizing Performance
 
 - Use the Production Build
 
@@ -279,7 +336,7 @@ class MyComponent extends React.Component {
 }
 ```
 
-Usage of *MyComponent**
+Usage of **MyComponent**
 
 ```javascript
 <MyComponent>
