--- a/Notes/React/includes/markdown/02.AdvancedGuides.md
+++ b/Notes/React/includes/markdown/02.AdvancedGuides.md
@@ -238,11 +238,111 @@ A full example, please go to [https://codepen.io/gaearon/pen/wqvxGa?editors=0010
 
 **As of React 16, errors that were not caught by any error boundary will result in unmounting of the whole React component tree.**
 
-## 5. Optimizing Performance
+## 5. JSX in depth
+
+**Fundamentally, JSX just provides syntactic sugar for the *React.createElement(component, props, ...children)* function.**
+
+### 5.1 React Must Be in Scope
+
+**Since JSX compiles into calls to React.createElement, the React library must also always be in scope from your JSX code.**
+
+#### 5.1.1 Using Dot Notation for JSX Type
+
+You can also refer to a React component using dot-notation from within JSX
+
+```javascript
+import React from 'react';
+const MyComponents = {
+  DatePicker: function DatePicker(props) {
+    return <div>Imagine a {props.color} datepicker here.</div>;
+  }
+}
+
+function BlueDatePicker() {
+  return <MyComponents.DatePicker color="blue" />;
+}
+
+```
+
+#### 5.1.2 User-Defined Components Must Be Capitalized
+
+#### 5.1.3 Choosing the Type at Runtime
+
+A wrong sample:
+
+```javascript
+import React from 'react';
+import { PhotoStory, VideoStory } from './stories';
+
+const components = {
+  photo: PhotoStory,
+  video: VideoStory
+};
+
+function Story(props) {
+  // Wrong! JSX type can't be an expression.
+  return <components[props.storyType] story={props.story} />;
+}
+```
+
+A correct sample:
+
+```javascript
+
+import React from 'react';
+import { PhotoStory, VideoStory } from './stories';
+
+const components = {
+  photo: PhotoStory,
+  video: VideoStory
+}
+
+function Story(props) {
+  // Correct! JSX type can be a capitalized variable.
+  const SpecificStory = components[props.storyType]
+  return <SpecificStory story={props.story} />
+}
+
+```
+
+### 5.2 Props in JSX
+
+#### 5.2.1 Props Default to “True”
+
+If you pass no value for a prop, it defaults to true. These two JSX expressions are equivalent:
+
+```javascript
+<MyTextBox autocomplete />
+
+<MyTextBox autocomplete={true} />
+```
+
+#### 5.2.2 Spread Attributes
+
+```javascript
+function App1() {
+  return <Greeting firstName="Ben" lastName="Hector" />
+}
+
+function App2() {
+  const props = {firstName: 'Ben', lastName: 'Hector'}
+  //  you can also specific props
+  return <Greeting {...props} />;
+}
+```
+
+### 5.3 Children in JSX
+
+- **Booleans, Null, and Undefined Are Ignored**
+- **Functions as Children**
+- JavaScript Expressions as Children
+
+
+## 6. Optimizing Performance
 
 - Use the Production Build
 
-## Portals
+## 7. Portals
 
 ### API for Portals
 
@@ -369,6 +469,165 @@ A component passes props into UI, a higher-order component transforms a componen
 HOC component provides business logic to a child component, it should not have UI properties by default.
 
 A detailed demo and explanation, please go to [https://time.geekbang.org/course/detail/100-9442](https://time.geekbang.org/course/detail/100-9442)
+
+## 11. React without ES6
+
+### 11.1 An sample code of **create-react-class**:
+
+```javascript
+var SayHello = createReactClass({
+  getInitialState: function() {
+    return {message: 'Hello!'}
+  },
+
+  handleClick: function() {
+    alert(this.state.message)
+  },
+
+  render: function() {
+    return (
+      <button onClick={this.handleClick}>
+        Say hello
+      </button>
+    )
+  }
+})
+```
+
+### 11.2 Mixins
+
+ES6 lanuched without surpporting Mixin. Therefore, there is no support for mixins when you use React with ES6 classes.
+
+**We also found numerous issues in codebases using mixins, and don’t recommend using them in the new code.**
+
+A sample code using Mixin in React without ES6:
+
+```javascript
+var SetIntervalMixin = {
+  componentWillMount: function() {
+    this.intervals = [];
+  },
+  setInterval: function() {
+    this.intervals.push(setInterval.apply(null, arguments));
+  },
+  componentWillUnmount: function() {
+    this.intervals.forEach(clearInterval);
+  }
+};
+
+var createReactClass = require('create-react-class');
+
+var TickTock = createReactClass({
+  mixins: [SetIntervalMixin], // Use the mixin
+  getInitialState: function() {
+    return {seconds: 0}
+  },
+  componentDidMount: function() {
+    this.setInterval(this.tick, 1000); // Call a method on the mixin
+  },
+  tick: function() {
+    this.setState({seconds: this.state.seconds + 1})
+  },
+  render: function() {
+    return (
+      <p>
+        React has been running for {this.state.seconds} seconds.
+      </p>
+    );
+  }
+});
+
+ReactDOM.render(
+  <TickTock />,
+  document.getElementById('example')
+)
+```
+
+## 12 React Without JSX
+
+**Each JSX element is just syntactic sugar for calling React.createElement(component, props, ...children). So, anything you can do with JSX can also be done with just plain JavaScript.**
+
+Grammar:
+
+```javascript
+React.createElement(component, props, ...children)
+```
+
+## 13. Reconciliation
+
+### 13.1 The Diffing Algorithm
+
+**When diffing two trees, React first compares the two root elements.**
+
+**If a root element gets unmounted, any components below it will also get unmounted.**
+
+**When updating style, React also knows to update only the properties that changed.**
+
+### 13.2 Keys
+
+**hen children have keys, React uses the key to match children in the original tree with children in the subsequent tree.**
+
+## 15. Render Props
+
+### 15.1 Render prop sample
+
+Libraries that use render props include *React Router* and *Downshift*.
+
+An example from **React-Router**
+
+A sample code:
+
+```javascript
+<DataProvider render={data => (
+  <h1>Hello {data.target}</h1>
+)}/>
+```
+
+```javascript
+import React from 'react'
+import { BrowserRouter as Router, Route } from 'react-router-dom'
+
+export default class App extends React.Component () {
+  render () {
+    return (
+      <Router>
+        <Route  path="/home" render={(Page) => {
+          // here we return an React element
+          return <Page />
+        }}/>
+      </Router>
+    )
+  }
+}
+```
+
+The inside logic for **render props** is
+
+```javascript
+render () {
+  // some code
+  {this.props.render(this.state)}
+}
+```
+
+More concretely, **a render prop is a function prop that a component uses to know what to render.**
+
+**One interesting thing to note about render props is that you can implement most higher-order components (HOC) using a regular component with a render prop.**
+
+### 15.2 Using Props Other Than render
+
+It’s important to remember that just because the pattern is called “render props” you don’t have to use a prop named render to use this pattern. In fact, any prop that is a function that a component uses to know what to render is technically a “render prop”.
+
+A sample code
+
+```javascript
+<Mouse children={mouse => (
+  <p>The mouse position is {mouse.x}, {mouse.y}</p>
+)}/>
+```
+
+### 15.3 Caveats
+
 
 ## API reference
 
