save markdown files

--- a/Notes/React/includes/markdown/02.AdvancedGuides.md
+++ b/Notes/React/includes/markdown/02.AdvancedGuides.md
@@ -337,7 +337,6 @@ function App2() {
 - **Functions as Children**
 - JavaScript Expressions as Children
 
-
 ## 6. Optimizing Performance
 
 - Use the Production Build
@@ -472,7 +471,7 @@ A detailed demo and explanation, please go to [https://time.geekbang.org/course/
 
 ## 11. React without ES6
 
-### 11.1 An sample code of **create-react-class**:
+### 11.1 An sample code of **create-react-class**
 
 ```javascript
 var SayHello = createReactClass({
@@ -628,6 +627,30 @@ A sample code
 
 ### 15.3 Caveats
 
+## 16. Static Type Checking
+
+**Static type chekers like Flow and Typescript identify certain types of problems before you even run your code.**
+**we recommend using Flow or TypeScript instead of PropTypes for larger code bases.**
+
+### 16.1 Flow
+
+Flow is a toll developed by Facebook to lets you annotate the variables, functions, and React components with a special type syntax, and catch mistakes early.
+
+Browser does not know Flow syntax, you need to compile it and stripped it flow from your source code before sending it to the browser.
+
+*If your project was set up using Create React App, congratulations! The Flow annotations are already being stripped by default so you don’t need to do anything else in this step.*
+
+#### Adding Flow Type Annotations
+
+By default, Flow only checks the files that include this annotation:
+
+```javascript
+// @flow
+```
+
+### 16.2 TypeScript
+
+Learn more about typescript with react [here](https://github.com/Microsoft/TypeScript-React-Starter#typescript-react-starter)
 
 ## API reference
 
